[tool.poetry]
name = "face-image-sorting"
version = "0.1.0"
description = ""
authors = ["nomnomnonono <murumuru1204@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pysen = {version = "0.10.3", extras = ["lint"]}

[tool.pysen]
version = "0.10.3"

[tool.pysen.lint]
enable_black = true
enable_flake8 = true
enable_isort = true
enable_mypy = false
mypy_preset = "strict"
line_length = 88
py_version = "py39"

[tool.pysen.lint.source]
excludes = [".venv/"]

[[tool.pysen.lint.mypy_targets]]
paths = ["."]
